--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -32,4 +32,4 @@ jobs:
         -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
         -Dsonar.qualitygate.wait=true  # Esto garantiza que la pipeline falle si no pasa el Quality Gate
     env:
-      SONARCLOUD_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Asegúrate de que el token esté configurado correctamente
+      SONARCLOUD_TOKEN: ${{ secrets.SONAR_TOKEN }}  
