--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -8,31 +8,21 @@ jobs:
   test_and_analysis:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-
     steps:
-      # Paso 1: Checkout del código
       - uses: actions/checkout@v4
 
-      # Paso 2: Configurar Node.js
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 20.11.1
           cache: 'npm'
 
-      # Paso 3: Instalar dependencias
       - run: npm ci
 
-      # Paso 4: Construir el proyecto si tiene un script de build
       - run: npm run build --if-present
 
-      # Paso 5: Ejecutar los tests
       - run: npm test
 
-      # Paso 6: Instalar y ejecutar el análisis de SonarCloud
       - run: |
           npm install -g sonar-scanner
           sonar-scanner \
